--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <script defer src="tensorflowjs.js"></script>
-    <script defer src="cam_utils.js"></script>
-    <script defer src="holistic.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script defer src="opencv.js" type="text/javascript"></script>
-    <script defer src="script.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <script defer src="./assets/js/tensorflowjs.js"></script>
+    <script defer src="./assets/js/holistic.js"></script>
+    <script defer src="./assets/js/cam_utils.js"></script>
+    <script defer src="./assets/js/opencv.js" type="text/javascript"></script>
+    <script defer src="./assets/js/app.js"></script>
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>TSL web app</title>
 </head>
 
